# Histogram

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Ubuntu.yml  install.yml  macos.yml
all/: CMakeLists.txt
cmake/: CPM.cmake
documentation/: CMakeLists.txt
documentation/pages/: about.dox
examples/: CMakeLists.txt
examples/shared_memory/: CMakeLists.txt  client_httpserver.cpp  server_sharedhistograms.cpp
include/histogram/: Histogram1D.h  Histogram2D.h  Histogram3D.h  MamaWriter.h  RootWriter.h  SharedHistograms.h  ThreadSafeHistogram.h  ThreadSafeHistogram1D.h  ThreadSafeHistogram2D.h  ThreadSafeHistogram3D.h  ThreadSafeHistograms.h
include/histogram/internal/: SharedMemoryBackend.h
src/histogram/: Histogram1D.cpp  Histogram2D.cpp  Histogram3D.cpp  Histograms.cpp  MamaWriter.cpp  RootWriter.cpp  SharedHistograms.cpp  ThreadSafeHistogram1D.cpp  ThreadSafeHistogram2D.cpp  ThreadSafeHistogram3D.cpp  ThreadSafeHistograms.cpp
src/histogram/internal/: SharedMemoryBackendPosix.cpp
test/: CMakeLists.txt
test/src/: Histogram.cpp  Histogram1D.cpp  SharedHistograms.cpp  ThreadSafeHistogram.cpp
